# Triton

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/examples/cpp/: CMakeLists.txt  Makefile  vex_ir.cpp  vex_ir2.cpp
src/examples/unicorn/: correct-argv1.py  hello-small-code.py  hello-with-branch.py  hello.py  vex_correct-argv1.py
src/libtriton/: CMakeLists.txt
src/libtriton/api/: api.cpp
src/libtriton/arch/: architecture.cpp  bitsVector.cpp  instruction.cpp  irBuilder.cpp  memoryAccess.cpp  operandWrapper.cpp  register.cpp
src/libtriton/arch/vex/: lifter.py.inc  vexCpu.cpp  vexLifter.cpp  vexSemantics.cpp  vexSpecifications.cpp
src/libtriton/arch/x86/: x8664Cpu.cpp  x86Cpu.cpp  x86Semantics.cpp
src/libtriton/ast/: ast.cpp
src/libtriton/bindings/python/namespaces/: initArchNamespace.cpp  initRegNamespace.cpp
src/libtriton/engines/solver/: solverEngine.cpp
src/libtriton/engines/symbolic/: pathManager.cpp  symbolicEngine.cpp
src/libtriton/includes/triton/: api.hpp  architecture.hpp  coreUtils.hpp  cpuInterface.hpp  instruction.hpp  irBuilder.hpp  logger.hpp  vexCpu.hpp  vexLifter.hpp  vexSemantics.hpp  vexSpecifications.hpp  x8664Cpu.hpp  x86Cpu.hpp
src/libtriton/utils/: coreUtils.cpp
src/samples/test/: build.sh  small-code.nasm
src/tracer/: CMakeLists.txt
src/tracer/unicorn/: CMakeLists.txt  Makefile  bindings.cpp  bindings.hpp  callbacks.cpp  context.cpp  context.hpp  init.cpp  logger.hpp  main.cpp  snapshot.cpp  snapshot.hpp  trigger.cpp  trigger.hpp  unicorn_elf_loader.cpp  unicorn_elf_loader.hpp  unicorn_wrapper.cpp  unicorn_wrapper.h  utils.cpp  utils.hpp
